fixed button on form clipping when in mobile view

--- a/assets/css/commission-styles.css
+++ b/assets/css/commission-styles.css
@@ -542,7 +542,7 @@ form {
     ---------------------------------*/
 .btn-submit {
   display: block;
-  width: 20%;
+  width: 100%;
   padding: 15px;
   background-color: #2c2820;
   color: #fff;
